samples/_failures_safe/1761162211_472d0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79db1cfd.c: In function ‘main’:
./samples/SAFE/__tmp_79db1cfd.c:170:9: error: expected expression at end of input
  170 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_79db1cfd.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_79db1cfd.c:170:9: error: expected declaration or statement at end of input
